# Lipo-Out-backend

./: .env  .env.template  .gitignore  .nixpacks.toml  README.md  alembic.ini  app.py  database.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c3827a1e1557_add_date_column_to_food_table.py
