[tool.poetry]
name = "lipo-out-backend"
version = "0.1.0"
description = ""
authors = ["andy9998811@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
greenlet = "^3.1.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
